--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,11 @@ environment:
   flutter: ">=3.3.0"
 
 dependencies:
-  esc_pos_utils_plus: ^2.0.4
+  esc_pos_utils_plus: ^2.0.1+6
   ffi: ^2.1.4
   flutter:
     sdk: flutter
-  image: ^4.5.4
+  image: ^3.1.3
   plugin_platform_interface: ^2.1.8
   screenshot: ^3.0.0
   universal_ble: ^0.21.1
